--- a/config
+++ b/config
@@ -14,7 +14,6 @@ set $bcolor #044440
 set $fcolor #DD6633
 
 set $term_exec exec i3-sensible-terminal -e
-set $i3k exec ~/.i3/i3k
 
 set $ws_1     1: main
 set $ws_2     2: ogame
@@ -243,9 +242,10 @@ mode "LAUNCH" {
   bindsym b $term_exec rvm default do bifrost pry, mode "default"
 
   bindsym s exec i3-sensible-terminal -e rvm default exec skynet pry `dmenu -b` --config .skynet-config.yaml, mode "default"
+
   bindsym Shift+s exec i3-sensible-terminal -e rvm default exec skynet rattack 11 `dmenu -b` --config .skynet-config.yaml, mode "default"
 
-  bindsym y exec dmenu -b | $i3k exec i3-sensible-terminal -e rvm default exec bifrost ytdl `dmenu -b`, mode "default"
+  bindsym y exec exec i3-sensible-terminal -e rvm default exec bifrost ytdl `dmenu -b`, mode "default"
 
   bindsym F7  $term_exec rvm default exec cappuccino, $term_exec rvm default exec cappuccino, mode "default"
   bindsym F6  exec ib3-sensible-terminal, split v, exec i3-sensible-terminal, split h, exec i3-sensible-terminal, mode "default"
@@ -256,15 +256,15 @@ mode "LAUNCH" {
 
   bindsym F11 $term_exec rvm default do skynet rattack 11 S126_IT --config ~/.skynet-config.yaml, $term_exec rvm default do skynet rattack 11 S133_IT --config ~/.skynet-config.yaml
 
+  bindsym F12 exec xrandr --auto, exec  sleep 1 && xrandr --output VGA1 --right-of LVDS1, mode "default"
+
   bindsym Escape mode "default"
   bindsym $mod+m mode "default"
 }
 
 mode "i3rb" {
-  bindsym i $term_exec rvm default do ruby ~/.i3/i3k.rb pry, mode "default"
-  bindsym w $i3k goto_workspace _dmenu_, mode "default"
-  bindsym e $i3k dmenu_loop, mode "default"
-  bindsym x exec xrandr --auto, exec  sleep 1 && xrandr --output VGA1 --right-of LVDS1, mode "default"
+  bindsym i $term_exec rvm default do i3rb pry, mode "default"
+  bindsym w exec i3-msg workspace `dmenu -b`, mode "default"
 
   bindsym Escape mode "default"
   bindsym $mod+i mode "default"
@@ -276,8 +276,6 @@ bindsym $mod+m    mode "LAUNCH"
 
 bindsym $mod+apostrophe workspace back_and_forth
 bindsym $mod+Shift+apostrophe move container to workspace back_and_forth
-bindsym $mod+igrave           exec $i3k get_workspace_names | dmenu -b | $i3k goto_workspace _stdin_
-bindsym $mod+Shift+igrave     exec $i3k get_workspace_names | dmenu -b | $i3k move_to_workspace _stdin_
 bindsym $mod+Shift+m exec xfce4-appfinder
 
 # Appplication assignments
@@ -339,5 +337,5 @@ client.unfocused          $bcolor $bcolor #FFFF00 #292d2e
 exec --no-startup-id nm-applet
 exec --no-startup-id volumeicon
 exec xrandr --output VGA1 --right-of LVDS1
-exec feh --bg-scale ~/.i3/wallpworkspace $ws_9, split h, exec gvim ~/.i3/config, exec i3-sensible-terminal, workspace $ws_main
+exec feh --bg-scale ~/.i3/wallpworkspace
 
