--- a/config
+++ b/config
@@ -44,6 +44,7 @@ set $term i3-sensible-terminal
 set $term_exec exec i3-sensible-terminal -e
 set $Lock exec i3lock
 set $TouchScreensaver exec i3-sensible-terminal -e rvm default do clockwork ~/.i3/xscreensaver_deactivator.rb
+set $Screenshot exec scrot
 
 # use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -121,28 +122,28 @@ bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
 
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+bindsym $mod+1 workspace number 1
+bindsym $mod+2 workspace number 2
+bindsym $mod+3 workspace number 3
+bindsym $mod+4 workspace number 4
+bindsym $mod+5 workspace number 5
+bindsym $mod+6 workspace number 6
+bindsym $mod+7 workspace number 7
+bindsym $mod+8 workspace number 8
+bindsym $mod+9 workspace number 9
+bindsym $mod+0 workspace number 10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Shift+1 move container to workspace number 1
+bindsym $mod+Shift+2 move container to workspace number 2
+bindsym $mod+Shift+3 move container to workspace number 3
+bindsym $mod+Shift+4 move container to workspace number 4
+bindsym $mod+Shift+5 move container to workspace number 5
+bindsym $mod+Shift+6 move container to workspace number 6
+bindsym $mod+Shift+7 move container to workspace number 7
+bindsym $mod+Shift+8 move container to workspace number 8
+bindsym $mod+Shift+9 move container to workspace number 9
+bindsym $mod+Shift+0 move container to workspace number 10
 
 bindsym $mod+comma  workspace prev
 bindsym $mod+period workspace next
@@ -166,7 +167,8 @@ bindsym XF86AudioMute               exec amixer -q set Master toggle
 bindsym XF86AudioLowerVolume        exec amixer -q set Master 2%- unmute
 bindsym XF86AudioRaiseVolume        exec amixer -q set Master 2%+ unmute
 bindsym Shift+XF86AudioLowerVolume  exec amixer -q set Master mute
-bindsym Print                       exec scrot
+bindsym Print                       $Screenshot
+bindsym Shift+Print                 exec xfce4-screenshooter
 
 bindsym $mod+Shift+ugrave $Lock
 bindsym $mod+Shift+agrave $TouchScreensaver
@@ -241,7 +243,7 @@ bar {
 
     focused_workspace  $fcolor #000000 #FFFFFF
     active_workspace   $fcolor #000000 #FFFFFF
-    urgent_workspace   #FF0000 #000000 #FFFFFF
+    urgent_workspace   #FF0000 $fcolor #FFFFFF
     inactive_workspace #111111 #000000 #FFFFFF
     #binding_mode       #FFFFFF $fcolor #ffffff
   }
@@ -251,7 +253,7 @@ bar {
   position bottom
   workspace_buttons no
   binding_mode_indicator no
-  tray_output note
+  tray_output none
   status_command rvm default do ruby ~/.i3/i3ba.rb 2>~/.i3/i3ba.rb.log
 }
 
