--- a/config
+++ b/config
@@ -44,7 +44,7 @@ set $term i3-sensible-terminal
 set $term_exec exec i3-sensible-terminal -e
 set $Lock exec i3lock
 set $TouchScreensaver exec i3-sensible-terminal -e rvm default do clockwork ~/.i3/xscreensaver_deactivator.rb
-set $Screenshot exec scrot
+set $Screenshot exec " scrot '%Y-%m-%d_$wx$h_scrot.png' -e 'mkdir -p ~/Immagini/Scrots/; mv $f ~/Immagini/Scrots/' "
 
 # use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -121,29 +121,40 @@ bindsym $mod+Shift+minus move scratchpad
 # If there are multiple scratchpad windows, this command cycles through them.
 bindsym $mod+minus scratchpad show
 
+set $WS1 I3
+set $WS2 2:🌀
+set $WS3 3:🌐
+set $WS4 4:🎝
+set $WS5 5:⚓
+set $WS6 6:⚓
+set $WS7 7:⚓
+set $WS8 8:🎮
+set $WS9 9:🔧
+set $WS10 10:📂
+
 # switch to workspace
-bindsym $mod+1 workspace number 1
-bindsym $mod+2 workspace number 2
-bindsym $mod+3 workspace number 3
-bindsym $mod+4 workspace number 4
-bindsym $mod+5 workspace number 5
-bindsym $mod+6 workspace number 6
-bindsym $mod+7 workspace number 7
-bindsym $mod+8 workspace number 8
-bindsym $mod+9 workspace number 9
-bindsym $mod+0 workspace number 10
+bindsym $mod+1 workspace $WS1
+bindsym $mod+2 workspace number $WS2
+bindsym $mod+3 workspace number $WS3
+bindsym $mod+4 workspace number $WS4
+bindsym $mod+5 workspace number $WS5
+bindsym $mod+6 workspace number $WS6
+bindsym $mod+7 workspace number $WS7
+bindsym $mod+8 workspace number $WS8
+bindsym $mod+9 workspace number $WS9
+bindsym $mod+0 workspace number $WS10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number 1
-bindsym $mod+Shift+2 move container to workspace number 2
-bindsym $mod+Shift+3 move container to workspace number 3
-bindsym $mod+Shift+4 move container to workspace number 4
-bindsym $mod+Shift+5 move container to workspace number 5
-bindsym $mod+Shift+6 move container to workspace number 6
-bindsym $mod+Shift+7 move container to workspace number 7
-bindsym $mod+Shift+8 move container to workspace number 8
-bindsym $mod+Shift+9 move container to workspace number 9
-bindsym $mod+Shift+0 move container to workspace number 10
+bindsym $mod+Shift+1 move container to workspace $WS1
+bindsym $mod+Shift+2 move container to workspace number $WS2
+bindsym $mod+Shift+3 move container to workspace number $WS3
+bindsym $mod+Shift+4 move container to workspace number $WS4
+bindsym $mod+Shift+5 move container to workspace number $WS5
+bindsym $mod+Shift+6 move container to workspace number $WS6
+bindsym $mod+Shift+7 move container to workspace number $WS7
+bindsym $mod+Shift+8 move container to workspace number $WS8
+bindsym $mod+Shift+9 move container to workspace number $WS9
+bindsym $mod+Shift+0 move container to workspace number $WS10
 
 bindsym $mod+comma  workspace prev
 bindsym $mod+period workspace next
@@ -167,10 +178,12 @@ bindsym XF86AudioMute               exec amixer -q set Master toggle
 bindsym XF86AudioLowerVolume        exec amixer -q set Master 2%- unmute
 bindsym XF86AudioRaiseVolume        exec amixer -q set Master 2%+ unmute
 bindsym Shift+XF86AudioLowerVolume  exec amixer -q set Master mute
+bindsym Shift+XF86AudioRaiseVolume  exec amixer -q set Master toggle
 bindsym Print                       $Screenshot
 bindsym Shift+Print                 exec xfce4-screenshooter
 
-bindsym $mod+Shift+ugrave $Lock
+bindsym $mod+ugrave workspace "I3wm.org" 
+bindsym $mod+Shift+ugrave workspace "I3wm.org", $Lock
 bindsym $mod+Shift+agrave $TouchScreensaver
 
 # resize window (you can also use the mouse for that)
@@ -200,35 +213,59 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+mode "MARK" {
+
+  bindsym Shift+1 mark MARK#1
+  bindsym Shift+2 mark MARK#2
+  bindsym Shift+3 mark MARK#3
+  bindsym Shift+4 mark MARK#4
+  bindsym Shift+5 mark MARK#5
+
+  bindsym 1 [con_mark="MARK#1"] focus
+  bindsym 2 [con_mark="MARK#2"] focus
+  bindsym 3 [con_mark="MARK#3"] focus
+  bindsym 4 [con_mark="MARK#4"] focus
+  bindsym 5 [con_mark="MARK#5"] focus
+
+  bindsym Escape mode "default"
+  bindsym $mod+n mode "default"
+}
+
 mode "SYSTEM" {
   
   bindsym F12 exec xrandr --auto, exec  sleep 1 && xrandr --output VGA1 --right-of LVDS1, mode "default"
-  bindsym c $term_exec vim ~/.i3/config, mode "default"
+  bindsym c exec xfce4-terminal --working-directory ~/.i3 -e "vim config", mode "default"
+  bindsym g exec " cd .i3; rvm default do ruby ~/.i3/graffiti.rb apod ", mode "default"
 
   bindsym Escape mode "default"
   bindsym $mod+i mode "default"
 }
 
 mode "LAUNCHER" {
-  bindsym f $term_exec vifm
-  bindsym s $term_exec cmus
-  bindsym a $term_exec alsamixer
-  bindsym e $term_exec vim
-  bindsym Shift+e exec gvim
-  bindsym x $term_exec tmuxinator start `dmenu -p \"TMUX-SESSION:\" `
+  bindsym f $term_exec vifm, mode "default"
+  bindsym c $term_exec cmus, mode "default"
+  bindsym a $term_exec alsamixer, mode "default"
+  bindsym e $term_exec vim, mode "default"
+  bindsym Shift+e exec gvim, mode "default"
+  bindsym x $term_exec tmuxinator start `dmenu -p \"TMUX-SESSION:\" `, mode "default"
+  bindsym s $term_exec tmuxinator start skynet, mode "default"
+
+  bindsym 1 exec firefox, mode "default"
+  bindsym 2 exec chromium-browser, mode "default"
 
   bindsym Escape mode "default"
   bindsym $mod+m mode "default"
 }
 
-bindsym $mod+i mode "SYSTEM"
-bindsym $mod+m mode "LAUNCHER"
+bindsym $mod+n mode "mark"
+bindsym $mod+i mode "system"
+bindsym $mod+m mode "launcher"
 
-assign [class="Firefox"] 2:⚝
-assign [class="Chromium.*"] 3:🗺
-assign [class="Wesnoth"] 8:♖
-assign [class="Xfce4-terminal" title=".*cmus.*" ] 3:♫
-assign [class="Xfce4-terminal" title=".*alsamixer.*" ] 3:♫
+assign [class="Firefox"] $WS2
+assign [class="Chromium.*"] $WS3
+assign [class="Wesnoth"] $WS8
+assign [class="Xfce4-terminal" title=".*cmus.*" ] $WS4
+assign [class="Xfce4-terminal" title=".*alsamixer.*" ] $WS4
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -257,9 +294,7 @@ bar {
   status_command rvm default do ruby ~/.i3/i3ba.rb 2>~/.i3/i3ba.rb.log
 }
 
-exec --no-startup-id i3-sensible-terminal -e alsamixer
-exec --no-startup-id i3-sensible-terminal -e cmus
 exec --no-startup-id nm-applet
 exec --no-startup-id pasystray
 exec xrandr --output VGA1 --right-of LVDS1
-exec_always cd .i3; rvm default exec ruby ~/.i3/graffiti.rb
+exec_always cd .i3; rvm default exec ruby ~/.i3/graffiti.rb apod
