--- a/config
+++ b/config
@@ -127,7 +127,7 @@ set $WS3 3:🌐
 set $WS4 4:🎝
 set $WS5 5:⚓
 set $WS6 6:⚓
-set $WS7 7:⚓
+set $WS7 7:📞
 set $WS8 8:🎮
 set $WS9 9:🔧
 set $WS10 10:📂
@@ -164,6 +164,9 @@ bindsym $mod+apostrophe workspace back_and_forth
 bindsym $mod+igrave exec i3-msg workspace `dmenu `
 bindsym $mod+Shift+igrave exec i3-msg move container to workspace `dmenu `
 
+bindsym $mod+backslash exec i3-input -P "GO TO WORKSPACE: " -F "workspace %s" -l 2 
+bindsym $mod+Shift+backslash exec i3-input -P "MOVE TO WORKSPACE: " -F "move container to workspace %s" -l 2
+
 # reload the configuration file
 bindsym $mod+shift+c reload
 
@@ -173,7 +176,13 @@ bindsym $mod+shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 
 bindsym $mod+Escape exec killall i3-nagbar
 
-bindsym XF86AudioPlay               exec xmms2 toggle
+###
+# Multimedia keys
+###
+bindsym XF86AudioPlay               exec cmus-remote --pause
+bindsym XF86AudioPrev               exec cmus-remote --prev
+bindsym XF86AudioNext               exec cmus-remote --next
+  
 bindsym XF86AudioMute               exec amixer -q set Master toggle
 bindsym XF86AudioLowerVolume        exec amixer -q set Master 2%- unmute
 bindsym XF86AudioRaiseVolume        exec amixer -q set Master 2%+ unmute
@@ -249,6 +258,7 @@ mode "LAUNCHER" {
   bindsym Shift+e exec gvim, mode "default"
   bindsym x $term_exec tmuxinator start `dmenu -p \"TMUX-SESSION:\" `, mode "default"
   bindsym s $term_exec tmuxinator start skynet, mode "default"
+  bindsym i $term_exec irssi, mode "default"
 
   bindsym 1 exec firefox, mode "default"
   bindsym 2 exec chromium-browser, mode "default"
@@ -264,13 +274,14 @@ bindsym $mod+m mode "launcher"
 assign [class="Firefox"] $WS2
 assign [class="Chromium.*"] $WS3
 assign [class="Wesnoth"] $WS8
-assign [class="Xfce4-terminal" title=".*cmus.*" ] $WS4
-assign [class="Xfce4-terminal" title=".*alsamixer.*" ] $WS4
+assign [class="(i)Xfce4-terminal" instance=".*cmus.*" ] $WS4
+assign [class="(i)Xfce4-terminal" title=".*alsamixer.*" ] $WS4
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
   position top
+  font pango:dejavu sans book 8
   tray_output LVDS1
   status_command while [ true ]; do date; sleep 1; done
   colors {
@@ -288,13 +299,18 @@ bar {
 
 bar {
   position bottom
+  font pango:dejavu sans book 8
   workspace_buttons no
   binding_mode_indicator no
   tray_output none
-  status_command rvm default do ruby ~/.i3/i3ba.rb 2>~/.i3/i3ba.rb.log
+  status_command ~/.i3/i3ba.rb
 }
+
+###
+# Autostart
+###
 
 exec --no-startup-id nm-applet
 exec --no-startup-id pasystray
 exec xrandr --output VGA1 --right-of LVDS1
-exec_always cd .i3; rvm default exec ruby ~/.i3/graffiti.rb apod
+exec cd .i3; rvm default exec ruby ~/.i3/graffiti.rb apod
