--- a/config
+++ b/config
@@ -42,7 +42,7 @@ set $right l
 
 set $term i3-sensible-terminal
 set $term_exec exec i3-sensible-terminal -e
-set $Lock exec i3lock
+set $Lock exec xscreensaver-command --activate
 set $TouchScreensaver exec i3-sensible-terminal -e rvm default do clockwork ~/.i3/xscreensaver_deactivator.rb
 set $Screenshot exec " scrot '%Y-%m-%d_$wx$h_scrot.png' -e 'mkdir -p ~/Immagini/Scrots/; mv $f ~/Immagini/Scrots/' "
 
@@ -121,16 +121,16 @@ bindsym $mod+Shift+minus move scratchpad
 # If there are multiple scratchpad windows, this command cycles through them.
 bindsym $mod+minus scratchpad show
 
-set $WS1 I3
-set $WS2 2:🌀
-set $WS3 3:🌐
-set $WS4 4:🎝
-set $WS5 5:⚓
-set $WS6 6:⚓
-set $WS7 7:📞
-set $WS8 8:🎮
-set $WS9 9:🔧
-set $WS10 10:📂
+set $WS1 00:I3
+set $WS2 20:🌀
+set $WS3 30:🌐
+set $WS4 40:🎝
+set $WS5 50:⚓
+set $WS6 60:⚓
+set $WS7 70:📞
+set $WS8 80:🎮
+set $WS9 90:🔧
+set $WS10 100:📂
 
 # switch to workspace
 bindsym $mod+1 workspace $WS1
@@ -197,27 +197,27 @@ bindsym $mod+Shift+agrave $TouchScreensaver
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
-        # these bindings trigger as soon as you enter the resize mode
+  # these bindings trigger as soon as you enter the resize mode
 
-        # pressing left will shrink the window’s width.
-        # pressing right will grow the window’s width.
-        # pressing up will shrink the window’s height.
-        # pressing down will grow the window’s height.
-        bindsym $left       resize shrink width 10 px or 10 ppt
-        bindsym $down       resize grow height 10 px or 10 ppt
-        bindsym $up         resize shrink height 10 px or 10 ppt
-        bindsym $right      resize grow width 10 px or 10 ppt
+  # pressing left will shrink the window’s width.
+  # pressing right will grow the window’s width.
+  # pressing up will shrink the window’s height.
+  # pressing down will grow the window’s height.
+  bindsym $left       resize shrink width 10 px or 10 ppt
+  bindsym $down       resize grow height 10 px or 10 ppt
+  bindsym $up         resize shrink height 10 px or 10 ppt
+  bindsym $right      resize grow width 10 px or 10 ppt
 
-        # same bindings, but for the arrow keys
-        bindsym Left        resize shrink width 10 px or 10 ppt
-        bindsym Down        resize grow height 10 px or 10 ppt
-        bindsym Up          resize shrink height 10 px or 10 ppt
-        bindsym Right       resize grow width 10 px or 10 ppt
+  # same bindings, but for the arrow keys
+  bindsym Left        resize shrink width 10 px or 10 ppt
+  bindsym Down        resize grow height 10 px or 10 ppt
+  bindsym Up          resize shrink height 10 px or 10 ppt
+  bindsym Right       resize grow width 10 px or 10 ppt
 
-        # back to normal: Enter or Escape
-        bindsym Return mode "default"
-
-        bindsym Escape mode "default"
+  # back to normal: Enter or Escape
+  bindsym Escape mode "default"
+  bindsym Return mode "default"
+  bindsym $mod+r mode "default"
 }
 
 bindsym $mod+r mode "resize"
@@ -237,8 +237,32 @@ mode "MARK" {
   bindsym 5 [con_mark="MARK#5"] focus
 
   bindsym Escape mode "default"
+  bindsym Return mode "default"
+  bindsym $mod+b mode "default"
+}
+
+bindsym $mod+b mode "mark"
+
+mode "WORKSPACES" {
+
+  bindsym 1 workspace number 61:work1, mode "default"
+  bindsym 2 workspace number 62:work2, mode "default"
+  bindsym 3 workspace number 63:work3, mode "default"
+  bindsym 4 workspace number 64:work4, mode "default"
+  bindsym 5 workspace number 65:work5, mode "default"
+
+  bindsym Shift+1 move container to workspace number 61:work1, mode "default"
+  bindsym Shift+2 move container to workspace number 62:work2, mode "default"
+  bindsym Shift+3 move container to workspace number 63:work3, mode "default"
+  bindsym Shift+4 move container to workspace number 64:work4, mode "default"
+  bindsym Shift+5 move container to workspace number 65:work5, mode "default"
+
+  bindsym Escape mode "default"
+  bindsym Return mode "default"
   bindsym $mod+n mode "default"
 }
+
+bindsym $mod+n mode "workspaces"
 
 mode "SYSTEM" {
   
@@ -247,8 +271,11 @@ mode "SYSTEM" {
   bindsym g exec " cd .i3; rvm default do ruby ~/.i3/graffiti.rb apod ", mode "default"
 
   bindsym Escape mode "default"
+  bindsym Return mode "default"
   bindsym $mod+i mode "default"
 }
+
+bindsym $mod+i mode "system"
 
 mode "LAUNCHER" {
   bindsym f $term_exec vifm, mode "default"
@@ -269,8 +296,6 @@ mode "LAUNCHER" {
   bindsym $mod+m mode "default"
 }
 
-bindsym $mod+n mode "mark"
-bindsym $mod+i mode "system"
 bindsym $mod+m mode "launcher"
 
 assign [class="Firefox"] $WS2
@@ -304,7 +329,8 @@ bar {
   position bottom
   workspace_buttons no
   binding_mode_indicator no
-  
+  tray_output none  
+
   font pango:dejavu sans book 8
   status_command i3barb 2>~/.i3/i3ba.rb.log
 }
@@ -317,3 +343,4 @@ exec --no-startup-id nm-applet
 exec --no-startup-id pasystray
 exec xrandr --output VGA1 --right-of LVDS1
 exec cd .i3; rvm default exec ruby ~/.i3/graffiti.rb apod
+exec xscreensaver
