--- a/config
+++ b/config
@@ -122,12 +122,12 @@ bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
 
 set $WS1 00:I3
-set $WS2 20:🌀
+set $WS2 20:📧
 set $WS3 30:🌐
-set $WS4 40:🎝
-set $WS5 50:⚓
-set $WS6 60:⚓
-set $WS7 70:📞
+set $WS4 40:📞
+set $WS5 50:🎝
+set $WS6 60:📽
+set $WS7 70:🔬
 set $WS8 80:🎮
 set $WS9 90:🔧
 set $WS10 100:📂
@@ -245,17 +245,17 @@ bindsym $mod+b mode "mark"
 
 mode "WORKSPACES" {
 
-  bindsym 1 workspace number 61:work1, mode "default"
-  bindsym 2 workspace number 62:work2, mode "default"
-  bindsym 3 workspace number 63:work3, mode "default"
-  bindsym 4 workspace number 64:work4, mode "default"
-  bindsym 5 workspace number 65:work5, mode "default"
+  bindsym 1 workspace number 110:work1, mode "default"
+  bindsym 2 workspace number 120:work2, mode "default"
+  bindsym 3 workspace number 130:work3, mode "default"
+  bindsym 4 workspace number 140:work4, mode "default"
+  bindsym 5 workspace number 150:work5, mode "default"
 
-  bindsym Shift+1 move container to workspace number 61:work1, mode "default"
-  bindsym Shift+2 move container to workspace number 62:work2, mode "default"
-  bindsym Shift+3 move container to workspace number 63:work3, mode "default"
-  bindsym Shift+4 move container to workspace number 64:work4, mode "default"
-  bindsym Shift+5 move container to workspace number 65:work5, mode "default"
+  bindsym Shift+1 move container to workspace number 110:work1, mode "default"
+  bindsym Shift+2 move container to workspace number 120:work2, mode "default"
+  bindsym Shift+3 move container to workspace number 130:work3, mode "default"
+  bindsym Shift+4 move container to workspace number 140:work4, mode "default"
+  bindsym Shift+5 move container to workspace number 150:work5, mode "default"
 
   bindsym Escape mode "default"
   bindsym Return mode "default"
@@ -298,11 +298,11 @@ mode "LAUNCHER" {
 
 bindsym $mod+m mode "launcher"
 
-assign [class="Firefox"] $WS2
+assign [class="Firefox"] 21:ogame
 assign [class="Chromium.*"] $WS3
 assign [class="Wesnoth"] $WS8
-assign [class="(i)Xfce4-terminal" instance=".*cmus.*" ] $WS4
-assign [class="(i)Xfce4-terminal" title=".*alsamixer.*" ] $WS4
+assign [class="(i)Xfce4-terminal" instance=".*cmus.*" ] $WS5
+assign [class="(i)Xfce4-terminal" title=".*alsamixer.*" ] $WS5
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
